--- a/index.html
+++ b/index.html
@@ -4,12 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style/style.css">
     <title>Metflix - Movie Data Base</title>
 </head>
 <body>
-    
-    
+
+    <!-- NAVBAR -->
+
+    <nav>
+        <div class="container flex">
+            <div class="logo">
+                <a href="#!"><img src="images/logo-film.png" alt="metflix-logo-film"></a>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href=""></a>Home</li>
+                    <li><a href=""></a>Popular</li>
+                    <li><a href=""></a>Coming Soon</li>
+                    <li><a href=""></a>Top Rated</li>
+                </ul>
+            </div>
+            <div class="sign-in">
+                <a href="">sign in</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- HERO -->
+    <section class="hero">
+        <div class="container">
+            <div class="hero-left">
+                <h1 class="heading-1"></h1>
+                <div class="movie-infos">
+                    <p id="pg">PG 18</p>
+                    <p id="vidQuality">HD</p>
+                    <p id="genres">Triller, Drama</p>
+                    <p id="relYear"><i class="far fa-calendar-alt"></i> 2021</p>
+                    <p id="duration"><i class="far fa-clock"></i> 120min</p>
+                </div>
+                <div class="watch-now"><i class="fas fa-play"></i> watch now</div>
+            </div>
+            <div class="hero-right">
+                <img src="" alt="">
+            </div>
+            <div class="search-bar" id="searchBar"><input type="search" name="search" id="search" placeholder="find movie" autocomplete="off"></div>
+        </div>
+    </section>
+
+    <!-- MAIN -->
+
+    <main>
+        <section>
+        </section>
+    </main>
+
+    <!-- FOOTER -->
+
+    <footer>
+
+    </footer>
 
     <script src="js/app.js"></script>
 </body>
