--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                 <a href="#!"><img src="images/logo-film.png" alt="metflix-logo-film"></a>
             </div>
             <div class="links">
-                <ul>
-                    <li><a href=""></a>Home</li>
-                    <li><a href=""></a>Popular</li>
-                    <li><a href=""></a>Coming Soon</li>
-                    <li><a href=""></a>Top Rated</li>
+                <ul class="flex">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Popular</a></li>
+                    <li><a href="">Coming Soon</a></li>
+                    <li><a href="">Top Rated</a></li>
                 </ul>
             </div>
             <div class="sign-in">
-                <a href="">sign in</a>
+                <a href="#" class="btn">sign in</a>
             </div>
         </div>
     </nav>
@@ -43,7 +43,9 @@
                     <p id="relYear"><i class="far fa-calendar-alt"></i> 2021</p>
                     <p id="duration"><i class="far fa-clock"></i> 120min</p>
                 </div>
-                <div class="watch-now"><i class="fas fa-play"></i> watch now</div>
+                <div class="watch-now">
+                    <a href="#" class="btn"><i class="fas fa-play"></i>watch now</a>
+                </div>
             </div>
             <div class="hero-right">
                 <img src="" alt="">
