--- a/index.html
+++ b/index.html
@@ -28,22 +28,30 @@
             <div class="sign-in">
                 <a href="#" class="btn">sign in</a>
             </div>
+            <div class="menu-icon"></div>
         </div>
     </nav>
 
     <!-- HERO -->
     <section class="hero">
-        <div class="container">
+        <div class="container flex">
             <div class="hero-left">
                 <h1 class="heading-1"></h1>
-                <div class="movie-infos">
+                <div class="movie-logo">
+                    <img src="images/raya-logo.png" alt="raya_the_last_dragon">
+                </div>
+                <div class="movie-overview">
+                    <p>Long ago, in the fantasy world of Kumandra, humans and dragons lived together in harmony. But when an evil force threatened the land, the dragons sacrificed themselves to save humanity.</p>
+                    <a href="#">Read More 	&#8594;</a>
+                </div>
+                <div class="movie-meta">
                     <p id="pg">PG 18</p>
                     <p id="vidQuality">HD</p>
                     <p id="genres">Triller, Drama</p>
                     <p id="relYear"><i class="far fa-calendar-alt"></i> 2021</p>
                     <p id="duration"><i class="far fa-clock"></i> 120min</p>
                 </div>
-                <div class="watch-now">
+                <div class="movie-watch">
                     <a href="#" class="btn"><i class="fas fa-play"></i>watch now</a>
                 </div>
             </div>
