--- a/index.html
+++ b/index.html
@@ -10,67 +10,69 @@
 </head>
 <body>
 
-    <!-- NAVBAR -->
+    <!-- HEADER -->
+    <header>
 
-    <nav>
-        <div class="container flex">
-            <div class="logo">
-                <a href="#!"><img src="images/logo-film.png" alt="metflix-logo-film"></a>
+        <!-- NAVBAR -->  
+        <nav>
+            <div class="container flex">
+                <div class="logo">
+                    <a href="#!"><img src="images/logo-film.png" alt="metflix-logo-film"></a>
+                </div>
+                <div class="links">
+                    <ul class="flex">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Popular</a></li>
+                        <li><a href="">Coming Soon</a></li>
+                        <li><a href="">Top Rated</a></li>
+                    </ul>
+                </div>
+                <div class="sign-in">
+                    <a href="#" class="btn">sign in</a>
+                </div>
+                <div class="menu-icon"></div>
             </div>
-            <div class="links">
-                <ul class="flex">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Popular</a></li>
-                    <li><a href="">Coming Soon</a></li>
-                    <li><a href="">Top Rated</a></li>
-                </ul>
+        </nav>
+    
+        <!-- HERO -->
+        <section class="hero">
+            <div class="container flex">
+                <div class="hero-left">
+                    <h1 class="heading-1"></h1>
+                    <div class="movie-logo">
+                        <img src="images/raya-logo.png" alt="raya_the_last_dragon">
+                    </div>
+                    <div class="movie-overview">
+                        <p>Long ago, in the fantasy world of Kumandra, humans and dragons lived together in harmony. But when an evil force threatened the land, the dragons sacrificed themselves to save humanity.</p>
+                        <a href="#">Read More 	&#8594;</a>
+                    </div>
+                    <div class="movie-meta">
+                        <p id="pg">PG 18</p>
+                        <p id="vidQuality">HD</p>
+                        <p id="genres">Triller, Drama</p>
+                        <p id="relYear"><i class="far fa-calendar-alt"></i> 2021</p>
+                        <p id="duration"><i class="far fa-clock"></i> 120min</p>
+                    </div>
+                    <div class="movie-watch">
+                        <a href="#" class="btn"><i class="fas fa-play"></i>watch now</a>
+                    </div>
+                </div>
+                <div class="hero-right">
+                    <img src="" alt="">
+                </div>
+                <div class="search-bar" id="searchBar"><input type="search" name="search" id="search" placeholder="find movie" autocomplete="off"></div>
             </div>
-            <div class="sign-in">
-                <a href="#" class="btn">sign in</a>
-            </div>
-            <div class="menu-icon"></div>
-        </div>
-    </nav>
+        </section>
 
-    <!-- HERO -->
-    <section class="hero">
-        <div class="container flex">
-            <div class="hero-left">
-                <h1 class="heading-1"></h1>
-                <div class="movie-logo">
-                    <img src="images/raya-logo.png" alt="raya_the_last_dragon">
-                </div>
-                <div class="movie-overview">
-                    <p>Long ago, in the fantasy world of Kumandra, humans and dragons lived together in harmony. But when an evil force threatened the land, the dragons sacrificed themselves to save humanity.</p>
-                    <a href="#">Read More 	&#8594;</a>
-                </div>
-                <div class="movie-meta">
-                    <p id="pg">PG 18</p>
-                    <p id="vidQuality">HD</p>
-                    <p id="genres">Triller, Drama</p>
-                    <p id="relYear"><i class="far fa-calendar-alt"></i> 2021</p>
-                    <p id="duration"><i class="far fa-clock"></i> 120min</p>
-                </div>
-                <div class="movie-watch">
-                    <a href="#" class="btn"><i class="fas fa-play"></i>watch now</a>
-                </div>
-            </div>
-            <div class="hero-right">
-                <img src="" alt="">
-            </div>
-            <div class="search-bar" id="searchBar"><input type="search" name="search" id="search" placeholder="find movie" autocomplete="off"></div>
-        </div>
-    </section>
+    </header>
 
     <!-- MAIN -->
-
     <main>
         <section>
         </section>
     </main>
 
     <!-- FOOTER -->
-
     <footer>
 
     </footer>
