--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <div class="container flex">
                 <div class="logo">
-                    <a href="#!"><img src="images/logo-film.png" alt="metflix-logo-film"></a>
+                    <a href="#!"><img src="/images/logo-film-1.png" alt="metflix-logo-film"> Metflix</a>
                 </div>
                 <div class="links">
                     <ul class="flex">
