--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
                         <li><a href="">Top Rated</a></li>
                     </ul>
                 </div>
-                <div class="sign-in">
+                <div class="sign-in flex">
                     <a href="#" class="btn">sign in</a>
+                    <div class="search-bar" id="searchBar">
+                        <i class="fas fa-search"></i>
+                        <input type="search" name="search" id="search" placeholder="find movie" autocomplete="off">
+                    </div>
                 </div>
                 <div class="menu-icon"></div>
             </div>
@@ -60,7 +64,7 @@
                 <div class="hero-right">
                     <img src="" alt="">
                 </div>
-                <div class="search-bar" id="searchBar"><input type="search" name="search" id="search" placeholder="find movie" autocomplete="off"></div>
+                
             </div>
         </section>
 
@@ -77,6 +81,6 @@
 
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
