--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <input type="search" name="search" id="search" placeholder="find movie" autocomplete="off">
                     </div>
                 </div>
-                <div class="menu-icon"></div>
+                <div class="menu-icon"><i class="fas fa-bars"></i></div>
             </div>
         </nav>
     
